MAGETWO-84934: fix-bluefoot-advance-slider-alignment - Fix stylesheet code style - Remove es6 sytax from default.js - Use css to check for slick init instead of error exception

--- a/app/code/Gene/BlueFoot/view/adminhtml/web/css/source/stage/block/media/_slider.less
+++ b/app/code/Gene/BlueFoot/view/adminhtml/web/css/source/stage/block/media/_slider.less
@@ -9,6 +9,11 @@
  */
 
 .pagebuilder-advanced-slider {
+
+  .add-slide-button{
+    margin: 0 0 20px 15px;
+  }
+
   .slick-slider {
     .slick-slide {
       min-height: 50px;
@@ -28,7 +33,7 @@
   padding: 80px 0;
 
   .pagebuilder-content {
-    display:inline-block;
+    display: inline-block;
     padding: 24px 20px;
     width: 30%;
     color: white;
@@ -54,68 +59,68 @@
 }
 
 .gene-bluefoot-slider {
-  max-width:750px;
-  box-sizing:border-box;
-  padding:0;
-  width:100%;
-  margin:@margin auto 40px;
+  max-width: 750px;
+  box-sizing: border-box;
+  padding: 0;
+  width: 100%;
+  margin: @margin auto 40px;
   .slick-dots {
-    width:100%;
-    text-align:center;
-    position:absolute;
-    bottom:-30px;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: -30px;
     li {
-      display:inline-block;
-      margin:0 3px;
+      display: inline-block;
+      margin: 0 3px;
       button {
-        border-radius:50%;
-        text-indent:-9999px;
-        width:14px;
-        height:14px;
-        border:none;
-        padding:0;
-        background:@light_grey;
+        border-radius: 50%;
+        text-indent: -9999px;
+        width: 14px;
+        height: 14px;
+        border: none;
+        padding: 0;
+        background: @light_grey;
         &:hover {
-          background:@theme_color_1;
+          background: @theme_color_1;
         }
       }
       &.slick-active {
         button {
-          background:@theme_color_1;
-          top:50%;
+          background: @theme_color_1;
+          top: 50%;
         }
       }
     }
   }
   .slick-arrow {
-    width:@commonHeight;
-    height:@commonHeight;
-    line-height:@commonHeight;
-    padding:0;
-    border:none;
-    background:@theme_color_1;
-    color:white;
-    position:absolute;
-    z-index:20;
-    top:calc(~'50% - 16px');
+    width: @commonHeight;
+    height: @commonHeight;
+    line-height: @commonHeight;
+    padding: 0;
+    border: none;
+    background: @theme_color_1;
+    color: white;
+    position: absolute;
+    z-index: 20;
+    top: calc(~'50% - 16px');
     &:hover {
-      background:@theme_color_2;
+      background: @theme_color_2;
     }
     &:before {
-      display:block;
-      line-height:@commonHeight;
-      font-family:@icon_font;
+      display: block;
+      line-height: @commonHeight;
+      font-family: @icon_font;
     }
-    &:focus { outline:none; }
+    &:focus { outline: none; }
   }
   .slick-next {
-    right:0;
+    right: 0;
     &:before {
       content: '\f054';
     }
   }
   .slick-prev {
-    left:0;
+    left: 0;
     &:before {
       content: '\f053';
     }
@@ -123,26 +128,26 @@
 }
 
 .gene-bluefoot-slider-item img {
-  width:100%;
+  width: 100%;
 }
 
 
 /* Advanced Slider */
 
 .bluefoot-advanced-slider-item {
-  background-size:cover;
-  background-position:center center;
-  background-repeat:no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .bluefoot-advanced-slider-content {
-  margin:@margin*2;
-  width:40%;
-  padding:@margin;
-  box-sizing:border-box;
-  display:inline-block;
-  background:rgba(0,0,0,0.5);
+  margin: @margin*2;
+  width: 40%;
+  padding: @margin;
+  box-sizing: border-box;
+  display: inline-block;
+  background: rgba(0,0,0,0.5);
   h3, p, li {
-    margin-bottom:@margin;
-    color:white;
+    margin-bottom: @margin;
+    color: white;
   }
 }
