--- a/app/code/Gene/BlueFoot/view/frontend/web/css/source/stage/block/media/_sliders.less
+++ b/app/code/Gene/BlueFoot/view/frontend/web/css/source/stage/block/media/_sliders.less
@@ -11,14 +11,14 @@
 /* BlueFoot CMS {less} variables */
 
 /* Colors */
-@theme_color_1:#779ecb;
-@theme_color_2:#5284bd;
+@theme_color_1: #779ecb;
+@theme_color_2: #5284bd;
 
-@error_color:#df504d;
-@dropColor:#244f72;
+@error_color: #df504d;
+@dropColor: #244f72;
 
-@border_color:#d0d0d0;
-@light_grey:#f5f5f5;
+@border_color: #d0d0d0;
+@light_grey: #f5f5f5;
 
 @panelColor: #2b2625;
 @iconColor: #6d6361;
@@ -26,51 +26,53 @@
 @iconColorBackgroundHover: #534d49;
 
 @configureColor: #F9F9F9;
-@confirgureColorDark:#DCDCDC;
+@confirgureColorDark: #DCDCDC;
 @configureTextColor: darken(@panelColor, 5%);
 
 @rowColor: #3370b5;
 @columnColor: #28b78c;
 @entityColor: #243743;
 
-@textColor:#545454;
+@textColor: #545454;
 
 @entityBackgroundColor: #7e7e7e;
 
 
 /* Fonts */
-@theme_font:'Open Sans', sans-serif;
-@icon_font:'BlueFoot Admin Icons';
+@theme_font: 'Open Sans', sans-serif;
+@icon_font: 'BlueFoot Admin Icons';
 
 
 /* Layout Variables */
-@logoWidth:150px;
-@logoHeight:40px;
+@logoWidth: 150px;
+@logoHeight: 40px;
 
-@geneLogoWidth:67px;
-@geneLogoHeight:30px;
+@geneLogoWidth: 67px;
+@geneLogoHeight: 30px;
 
-@sidebarWidth:650px;
-@optionHeight:32px;
-@commonHeight:32px;
-@largeHeight:50px;
-@panelWidth:260px;
-@margin:20px;
+@sidebarWidth: 650px;
+@optionHeight: 32px;
+@commonHeight: 32px;
+@largeHeight: 50px;
+@panelWidth: 260px;
+@margin: 20px;
 
-@tabSize:80px;
+@tabSize: 80px;
 
-@borderWidth:2px;
-@entityBorderWidth:1px;
+@borderWidth: 2px;
+@entityBorderWidth: 1px;
 
 @import './slick';
 @import './slick-theme';
 
 div[data-role='advanced-slider'],
 .pagebuilder-advanced-slider {
-    display:none;
-    &.ready{
-        display:block;
+    display: none;
+
+    &.slick-initialized {
+        display: block;
     }
+
     .slick-arrow {
         box-shadow: none;
 
@@ -162,68 +164,70 @@ a.button {
 }
 
 .gene-bluefoot-slider {
-    max-width:750px;
-    box-sizing:border-box;
-    padding:0;
-    width:100%;
-    margin:@margin auto 40px;
+    max-width: 750px;
+    box-sizing: border-box;
+    padding: 0;
+    width: 100%;
+    margin: @margin auto 40px;
     .slick-dots {
-        width:100%;
-        text-align:center;
-        position:absolute;
-        bottom:-30px;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: -30px;
         li {
-            display:inline-block;
-            margin:0 3px;
+            display: inline-block;
+            margin: 0 3px;
             button {
-                border-radius:50%;
-                text-indent:-9999px;
-                width:14px;
-                height:14px;
-                border:none;
-                padding:0;
-                background:@light_grey;
+                border-radius: 50%;
+                text-indent: -9999px;
+                width: 14px;
+                height: 14px;
+                border: none;
+                padding: 0;
+                background: @light_grey;
                 &:hover {
-                    background:@theme_color_1;
+                    background: @theme_color_1;
                 }
             }
             &.slick-active {
                 button {
-                    background:@theme_color_1;
-                    top:50%;
+                    background: @theme_color_1;
+                    top: 50%;
                 }
             }
         }
     }
     .slick-arrow {
-        width:@commonHeight;
-        height:@commonHeight;
-        line-height:@commonHeight;
-        padding:0;
-        border:none;
-        background:@theme_color_1;
-        color:white;
-        position:absolute;
-        z-index:20;
-        top:calc(~'50% - 16px');
+        width: @commonHeight;
+        height: @commonHeight;
+        line-height: @commonHeight;
+        padding: 0;
+        border: none;
+        background: @theme_color_1;
+        color: white;
+        position: absolute;
+        z-index: 20;
+        top: calc(~'50% - 16px');
         &:hover {
-            background:@theme_color_2;
+            background: @theme_color_2;
         }
         &:before {
-            display:block;
-            line-height:@commonHeight;
-            font-family:@icon_font;
+            display: block;
+            line-height: @commonHeight;
+            font-family: @icon_font;
         }
-        &:focus { outline:none; }
+        &:focus {
+            outline: none;
+        }
     }
     .slick-next {
-        right:0;
+        right: 0;
         &:before {
             content: '\f054';
         }
     }
     .slick-prev {
-        left:0;
+        left: 0;
         &:before {
             content: '\f053';
         }
@@ -231,26 +235,26 @@ a.button {
 }
 
 .gene-bluefoot-slider-item img {
-    width:100%;
+    width: 100%;
 }
 
 
 /* Advanced Slider */
 
 .bluefoot-advanced-slider-item {
-    background-size:cover;
-    background-position:center center;
-    background-repeat:no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 .bluefoot-advanced-slider-content {
-    margin:@margin*2;
-    width:40%;
-    padding:@margin;
-    box-sizing:border-box;
-    display:inline-block;
-    background:rgba(0,0,0,0.5);
+    margin: @margin*2;
+    width: 40%;
+    padding: @margin;
+    box-sizing: border-box;
+    display: inline-block;
+    background: rgba(0,0,0,0.5);
     h3, p, li {
-        margin-bottom:@margin;
-        color:white;
+        margin-bottom: @margin;
+        color: white;
     }
 }
